[gd_scene load_steps=3 format=3 uid="uid://g7yk2v9k3q2y8"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_settings"]
[ext_resource type="Theme" path="res://resources/theme_neowiz.tres" id="2_theme"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_settings")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.55, 0.98, 1)
theme_override_colors/font_shadow_color = Color(0, 0.96, 0.83, 0.4)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "설정"
horizontal_alignment = 1

[node name="Divider" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="BGMContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/BGMContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.96, 0.83, 1)
theme_override_font_sizes/font_size = 20
text = "배경음악"

[node name="BGMSlider" type="HSlider" parent="Panel/MarginContainer/VBox/BGMContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="BGMValue" type="Label" parent="Panel/MarginContainer/VBox/BGMContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 0.8)
theme_override_font_sizes/font_size = 18
text = "70%"
horizontal_alignment = 2

[node name="SFXContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/SFXContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.96, 0.83, 1)
theme_override_font_sizes/font_size = 20
text = "효과음"

[node name="SFXSlider" type="HSlider" parent="Panel/MarginContainer/VBox/SFXContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFXValue" type="Label" parent="Panel/MarginContainer/VBox/SFXContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 0.8)
theme_override_font_sizes/font_size = 18
text = "80%"
horizontal_alignment = 2

[node name="TextSpeedContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/TextSpeedContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.96, 0.83, 1)
theme_override_font_sizes/font_size = 20
text = "텍스트 속도"

[node name="TextSpeedSlider" type="HSlider" parent="Panel/MarginContainer/VBox/TextSpeedContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="TextSpeedValue" type="Label" parent="Panel/MarginContainer/VBox/TextSpeedContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 0.8)
theme_override_font_sizes/font_size = 18
text = "1.0x"
horizontal_alignment = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/FullscreenContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.96, 0.83, 1)
theme_override_font_sizes/font_size = 20
text = "전체화면"

[node name="FullscreenCheck" type="CheckButton" parent="Panel/MarginContainer/VBox/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="ApplyButton" type="Button" parent="Panel/MarginContainer/VBox/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "적용"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBox/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "닫기"
